--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
+/* Login Page */
+
+.login_main_container {
+  height: 100vh;
+  background-image: linear-gradient(-135deg, #c850c0, #4158d0);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.login_inner_container {
+  width: 50%;
+  padding: 40px;
+  background-color: #ffffff52;
+  border: 1px solid #ffffff52;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.login_form_container {
+  width: 45%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login_page_header {
+  width: 100%;
+  margin-bottom: 54px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.login_page_header p {
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login_form_input {
+  height: 40px;
+  width: 100%;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #e6e6e6;
+  border-radius: 40px;
+  color: #666;
+  padding: 10px 20px;
+}
+
+.login_form_button {
+  width: 80%;
+  margin: 10px 0 20px 0;
+  border-radius: 40px;
+}
+
+.login_form_container a {
+  display: block;
+  text-decoration: none;
+  margin-top: 54px;
+  color: #666;
+}
+
+.ls_input_field {
+  width: 100%;
+}
+
+.error_message {
+  text-align: center;
+  min-height: 25px;
+  color: red;
+}
+
+/* SignUp Page */
+
+.sign_up_form_button {
+  width: 40%;
+  margin: 20px 0;
+  border-radius: 40px;
+}
+
+/* Add task */
+
+.add_task_inner_container {
+  padding: 40px 150px;
+}
+
+/* View Task */
+
+.taskviewer_outer_container {
+  width: 100%;
+  padding: 10px 30px;
+  border: 1px solid #6c81eae9;
+  box-shadow: 3px 4px 6px #6c81eae9;
+  border-radius: 4px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.taskviewer_inner_container {
+  width: fit-content;
+  max-width: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.taskname {
+  margin: 0;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskviewer_inner_container i {
+  font-size: 24px;
+  padding: 4px 8px;
+  border: 1px solid;
+  box-shadow: 3px 4px 6px #6c81eae9;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.taskviewer_inner_container:nth-child(2) i:first-child {
+  color: #2879ff;
+}
+
+.taskviewer_inner_container:nth-child(2) i:nth-child() {
+  color: #2879ff;
+}
+
+.taskviewer_inner_container:nth-child(2) i:last-child {
+  color: red;
+}
+
+.taskname hr {
+  margin: 5px 0;
+}
+
+.completedtask_outer_container{
+  justify-content: center;
+}
+
+.completedtask_inner_container{
+  width: 100%;
+  max-width: none;
+  text-align: center;
+}
+
+.completedTask_name{
+  width: 100%;
+}
+
+.appbar_inner_container{
+  width: 20%;
+  height: 90%;
+  display: block;
+  box-sizing: border-box;
+}
+
+.profile-image{
+  width: 100%;
+  height: 32%;
+  border-radius: 50%;
+  border: 1px solid;
+  background-color: #c850c0;
+  margin-bottom: 60px;
+}
+
+.options-menu{
+  padding: 0;
+}
+
+.options-menu li{
+  padding:10px 0;
+  width: 100%;
+  list-style: none;
+  font-weight:500;
+  font-size: 24px;
+  text-align: center;
+  border: 1px solid #6c81eae9;
+  margin-bottom: 20px;
+  cursor: pointer;
+  box-shadow: 3px 4px 6px #273474e9;
+}
+
+.options-menu a{
+  text-decoration: none;
+  color: #000;
 }
